--- a/package.json
+++ b/package.json
@@ -1,5 +1,11 @@
 {
-  "devDependencies": {
-    "tailwindcss": "^3.4.17"
-  }
+	"scripts": {
+		"test": "jest"
+	},
+	"devDependencies": {
+		"jest": "^29.7.0",
+		"jest-environment-jsdom": "^29.7.0",
+		"jsdom": "^25.0.1",
+		"tailwindcss": "^3.4.17"
+	}
 }
